--- a/index.html
+++ b/index.html
@@ -598,21 +598,20 @@
 
           <div class="testimonial">
 
-            <h2 class="title">testimonial</h2>
+            <h2 class="title">Sobre Mí</h2>
 
             <div class="testimonial-card">
 
               <img src="./assets/images/testimonial-1.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80">
 
-              <p class="testimonial-name">Alan Doe</p>
+              <p class="testimonial-name">Gladys González</p>
 
-              <p class="testimonial-title">CEO & Founder Invision</p>
+              <p class="testimonial-title">CEO y fundador</p>
 
               <img src="./assets/images/icons/quotes.svg" alt="quotation" class="quotation-img" width="26">
 
               <p class="testimonial-desc">
-                Lorem ipsum dolor sit amet consectetur Lorem ipsum
-                dolor dolor sit amet.
+                
               </p>
 
             </div>
