Se edita la página Web

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/crochetcrush_pty" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -611,7 +611,7 @@
               <img src="./assets/images/icons/quotes.svg" alt="quotation" class="quotation-img" width="26">
 
               <p class="testimonial-desc">
-                
+                Mi nombre es Gladys González y soy una apasionada del crochet. Aprendí a tejer por la época de la Pandemia y desde entonces, el crochet se ha convertido en una parte importante de mi vida.
               </p>
 
             </div>
