Se edita la página Web

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
             <div class="testimonial-card">
 
-              <img src="./assets/images/testimonial-1.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80">
+              <img src="./propiedades/img/WhatsApp Image 2023-11-12 at 8.32.50 PM.jpg" alt="alan doe" class="testimonial-banner" width="80" height="80">
 
               <p class="testimonial-name">Gladys González</p>
 
