Se edita la página Web

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </button>
 
       <div class="newsletter-img">
-        <img src="./assets/images/newsletter.png" alt="subscribe newsletter" width="400" height="400">
+        <img src="./propiedades/img/newsletter.png" alt="subscribe newsletter" width="400" height="400">
       </div>
 
       <div class="newsletter">
@@ -48,17 +48,17 @@
 
           <div class="newsletter-header">
 
-            <h3 class="newsletter-title">Subscribe Newsletter.</h3>
+            <h3 class="newsletter-title">Suscribirse</h3>
 
             <p class="newsletter-desc">
-              Subscribe the <b>Anon</b> to get latest products and discount update.
+              Suscríbase a <b>CrochetCrush</b> para obtener los últimos productos y actualizaciones de descuentos
             </p>
 
           </div>
 
-          <input type="email" name="email" class="email-field" placeholder="Email Address" required>
+          <input type="email" name="email" class="email-field" placeholder="Dirección de correo electrónico" required>
 
-          <button type="submit" class="btn-newsletter">Subscribe</button>
+          <button type="submit" class="btn-newsletter">Subscribirse</button>
 
         </form>
 
